vpc.tf
#this is our main vpc
resource "aws_vpc" "Rs-main" {
  cidr_block       = "10.100.0.0/24"
  instance_tenancy = "default"

  tags = {
    name       = "rs-main"
    created_by = "Rutwik"
  }

}

#vpc public subnet in AZ ap-south-1a
resource "aws_subnet" "rs_public" {
  vpc_id            = aws_vpc.Rs-main.id
  cidr_block        = "10.100.0.0/26"
  availability_zone = "ap-south-1a"

  tags = {
    name       = "public subnet"
    created_by = "Rutwik"
  }
}

#vpc private subnet in AZ ap-south-1a
resource "aws_subnet" "rs_private" {
  vpc_id            = aws_vpc.Rs-main.id
  cidr_block        = "10.100.1.0/26"
  availability_zone = "ap-south-1a"

  tags = {
    name       = "private subnet"
    created_by = "Rutwik"
  }

}


#vpc private subnet in AZ ap-south-1b
resource "aws_subnet" "rs_public_2" {
  vpc_id            = aws_vpc.Rs-main.id
  cidr_block        = "10.100.2.0/26"
  availability_zone = "ap-south-1b"

  tags = {
    name       = "public subnet-2"
    created_by = "Rutwik"
  }
}

#vpc private subnet in AZ ap-south-1b

resource "aws_subnet" "rs_private_2" {
  vpc_id            = aws_vpc.Rs-main.id
  cidr_block        = "10.100.2.0/26"
  availability_zone = "ap-south-1b"

  tags = {
    name       = "private subnet-2"
    created_by = "Rutwik"
  }

}

resource "aws_internet_gateway" "rs-main-igw" {
  vpc_id = aws_vpc.Rs-main.id
}



resource "aws_route_table" "rs-public-rt" {
  vpc_id = aws_vpc.Rs-main.id

  route {
    cidr_block = "10.100.0.0/0"
    gateway_id = aws_internet_gateway.rs-main-igw.id

  }

  tags = {
    name       = "public route table"
    created_by = "Rutwik"
  }

}

resource "aws_route_table" "rs-private-rt" {
  vpc_id = aws_vpc.Rs-main.id


  tags = {
    name       = "private route table"
    created_by = "Rutwik"
  }

}

resource "aws_route_table_association" "rs-public-association" {
  subnet_id      = aws_subnet.rs_public.id
  route_table_id = aws_route_table.rs-public-rt.id

}

resource "aws_route_table_association" "rs-private-association" {
  subnet_id      = aws_subnet.rs_private.id
  route_table_id = aws_route_table.rs-private-rt.id
}

resource "aws_route_table_association" "rs-public-association-2" {
  subnet_id      = aws_subnet.rs_public_2.id
  route_table_id = aws_route_table.rs-public-rt.id

}

resource "aws_route_table_association" "rs-private-association-2" {
  subnet_id      = aws_subnet.rs_private_2.id
  route_table_id = aws_route_table.rs-private-rt.id
}
